2008-07-14  Satoshi Nakagawa <psychs@limechat.net>

	Fixed a bug, we should allow a Bignum for Time.at.

2008-07-14  Satoshi Nakagawa <psychs@limechat.net>

	/quote with no parameter caused a crash.

2008-07-10  Satoshi Nakagawa <psychs@limechat.net>

	Added voice and devoice menu items.

2008-07-10  Satoshi Nakagawa <psychs@limechat.net>

	Added commands completion.
	Added /clear command to clear a log.

==== LimeChat 0.19 ====

2008-07-08  Kevin Ballard <kballard@gmail.com>

	When updating the channel list, perform sorted insert instead of re-sorting.

2008-07-08  Kevin Ballard <kballard@gmail.com>

	Search channel topics in the Channel List.

2008-06-28  Satoshi Nakagawa <psychs@limechat.net>

	Changed to disconnect from all servers when the computer is going to sleep.
	Changed to reconnect to the servers after waking up.

2008-06-26  Satoshi Nakagawa <psychs@limechat.net>

	Changed cmd+shift+0..9 to cmd+ctrl+0..9 because cmd+shift+3..4 are for screen capture.

2008-06-26  Satoshi Nakagawa <psychs@limechat.net>

	Added cmd+shift+0..9 as shortcut keys for moving servers.

2008-06-24  Satoshi Nakagawa <psychs@limechat.net>

	Added badges on the icon for highlight or new talk.
	Make bouncing just one time for highlight.

2008-06-24  Satoshi Nakagawa <psychs@limechat.net>

	Added /timer command.
	e.g. /timer 5 join #limechat

2008-06-04  Satoshi Nakagawa <psychs@limechat.net>

	Added "first" attribute for span.sender to show nicknames in the first line only.

2008-06-03  Satoshi Nakagawa <psychs@limechat.net>

	Changed to ignore CTCP replies with empty commands.

==== LimeChat 0.18 ====

2008-05-21  HIROSE Masaaki <hirose31@gmail.com>

	Added nick attribute to the console log.

2008-05-06  Satoshi Nakagawa <artension@gmail.com>

	Supported non-BMP characters for exact word matching.

2008-05-06  Satoshi Nakagawa <artension@gmail.com>

	Cmd+E should use NSFindPboard.

2008-05-06  Satoshi Nakagawa <artension@gmail.com>

	Assigned Cmd+E to copy the selection.
